# docs-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  OWNERS  README.md  docker-compose-milvus.yml  docker-compose.yml  env.example  eval_retrieval.py  git_logs_temp.txt  git_msg.txt  gsoc2026_agentic_rag.md  issue44_unit_tests.patch  kube.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  routing_logs.jsonl  security_report.txt  seed_code_index.py  test_agent.py  test_code_ingestion.py  test_mcp_tools.py  test_milvus_full.py  verify_changes.py
pipelines/: README.md  README_incremental.md  code-pipeline.py  code_ingestion.py  example_incremental_usage.py  github_rag_incremental_pipeline.yaml  github_rag_pipeline.yaml  golden-pipeline.py  incremental-pipeline.py  issues-pipeline.py  issues_utils.py  kubeflow-pipeline.py  platform-architecture-pipeline.py  pyproject.toml  requirements.txt  text_cleaning.py  utils.py
pipelines/code-ingestion/: code_ingestion_pipeline.yaml  parsers.py  pipeline.py
pipelines/code_ingestion/: __init__.py  code_ingestion_pipeline.yaml  full_pipeline.yaml  pipeline.py  pipeline.yaml
pipelines/code_ingestion/components/: __init__.py  ast_parser.py  chunker.py  (+3 more)
pipelines/components/: indexer.py  processor.py  scraper.py
pipelines/shared/: __init__.py  embedding_utils.py  milvus_utils.py  retrieval_strategy.py  text_utils.py
server-https/: Dockerfile  app.py  deployment.yaml  pyproject.toml  requirements.txt  virtualservice.yaml
(+209 files in other folders)
